--- a/index.html
+++ b/index.html
@@ -27,17 +27,27 @@
                     title="Click to use IIIF viewer or drag'n'drop to add to open viewer" draggable="true">
             </a>
         </li>
+        <li>One of ours (multi page): <a target="_blank"
+                href="mirador/?manifest=https://iiif.rbge.org.uk/herb/iiif/E00010016/manifest">
+                <img src="logo-iiif.png" alt="IIIF Manifest"
+                    title="Click to use IIIF viewer or drag'n'drop to add to open viewer" draggable="true">
+            </a>
+        </li>
         <li>One from Berlin: <a target="_blank" href="mirador/?manifest=https://herbarium.bgbm.org/iiif/B200012402">
                 <img src="logo-iiif.png" alt="IIIF Manifest"
                     title="Click to use IIIF viewer or drag'n'drop to add to open viewer" draggable="true">
             </a>
         </li>
-        <li>Mrs Abington: <a target="_blank"
+
+        <li>Mrs Abington (Yale): <a target="_blank"
                 href="mirador/?manifest=https://manifests.collections.yale.edu/ycba/obj/5005">
                 <img src="logo-iiif.png" alt="IIIF Manifest"
                     title="Click to use IIIF viewer or drag'n'drop to add to open viewer" draggable="true">
             </a>
         </li>
+
+
+
         <li>Broken - No viewer:<a target="_blank" href="https://iiif.rbge.org.uk/herb/iiif/E00008781/manifest">
                 <img src="logo-iiif.png" alt="IIIF Manifest"
                     title="Click to use IIIF viewer or drag'n'drop to add to open viewer" draggable="true">
